fixed vat calculation & fixed tests & increased print size

--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -31,7 +31,7 @@
 	<system.net>
 		<mailSettings>
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
-				<specifiedPickupDirectory pickupDirectoryLocation="A:\Projects\Alicargo\Alicargo\Mails" />
+				<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
 			</smtp>
 			<!--<smtp deliveryMethod="Network" from="robot@avionrussia.com">
 				<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef" port="587"/>
@@ -41,7 +41,7 @@
 	<userSettings>
 		<Alicargo.Tests.Properties.Settings>
 			<setting name="MailsFolder" serializeAs="String">
-				<value>A:\Projects\Alicargo\Alicargo\Mails</value>
+				<value>C:\Projects\Alicargo\Alicargo\Mails</value>
 			</setting>
 		</Alicargo.Tests.Properties.Settings>
 	</userSettings>
