--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -38,7 +38,7 @@
 	<system.net>
 		<mailSettings>
 			<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-				<specifiedPickupDirectory pickupDirectoryLocation="A:\Projects\Alicargo\Alicargo\Mails" />
+				<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
 			</smtp>
 		</mailSettings>
 	</system.net>
