fixed main page styles

--- a/Alicargo/Alicargo.csproj
+++ b/Alicargo/Alicargo.csproj
@@ -610,70 +610,70 @@
     <Content Include="Content\themes\jMetro\images\ui-icons_d4d4d4_0.png" />
     <Content Include="Content\themes\jMetro\images\ui-icons_ffffff_0.png" />
     <Content Include="Content\themes\jMetro\jquery-ui.css" />
-    <Content Include="css\app.css" />
-    <Content Include="css\grabbing.png" />
-    <Content Include="css\pushy.css" />
-    <Content Include="css\swiper.css" />
-    <Content Include="images\icon-map.png" />
-    <Content Include="images\logo-ely.png" />
-    <Content Include="images\logo-trust.png" />
-    <Content Include="images\logos\ann.png" />
-    <Content Include="images\logos\armani.png" />
-    <Content Include="images\logos\blumarine.png" />
-    <Content Include="images\logos\cantarelli.png" />
-    <Content Include="images\logos\casadei.jpg" />
-    <Content Include="images\logos\cesare.png" />
-    <Content Include="images\logos\commedes.jpg" />
-    <Content Include="images\logos\costume.jpg" />
-    <Content Include="images\logos\dkny.png" />
-    <Content Include="images\logos\dolce.jpg" />
-    <Content Include="images\logos\dries.png" />
-    <Content Include="images\logos\emillio.jpg" />
-    <Content Include="images\logos\etro.jpg" />
-    <Content Include="images\logos\fendi.jpg" />
-    <Content Include="images\logos\furla.jpg" />
-    <Content Include="images\logos\gf-ferre.jpg" />
-    <Content Include="images\logos\giuseppe.gif" />
-    <Content Include="images\logos\gucci.jpg" />
-    <Content Include="images\logos\guess.png" />
-    <Content Include="images\logos\hogan.jpg" />
-    <Content Include="images\logos\lang.jpg" />
-    <Content Include="images\logos\marella.gif" />
-    <Content Include="images\logos\max.png" />
-    <Content Include="images\logos\maxmara.png" />
-    <Content Include="images\logos\missoni.jpeg" />
-    <Content Include="images\logos\miu.png" />
-    <Content Include="images\logos\mm.png" />
-    <Content Include="images\logos\morch.jpg" />
-    <Content Include="images\logos\parosh.jpg" />
-    <Content Include="images\logos\paul.gif" />
-    <Content Include="images\logos\prada.png" />
-    <Content Include="images\logos\roberto.png" />
-    <Content Include="images\logos\sander.jpg" />
-    <Content Include="images\logos\versace.jpg" />
-    <Content Include="images\logos\westwood.jpg" />
-    <Content Include="images\logos\yves.jpg" />
-    <Content Include="images\map-pic.png" />
-    <Content Include="images\preudomap-pic-1.png" />
-    <Content Include="images\preudomap-pic-2.png" />
-    <Content Include="images\slider-bottom-1.jpg" />
-    <Content Include="images\slider-bottom-2.jpg" />
-    <Content Include="images\slider-bottom-3.jpg" />
-    <Content Include="images\slider-bottom-4.jpg" />
-    <Content Include="images\slider-new-1.jpg" />
-    <Content Include="images\slider-new-2.jpg" />
-    <Content Include="images\slider-new-3.jpg" />
-    <Content Include="images\slider-new-4.jpg" />
-    <Content Include="images\sprites.png" />
+    <Content Include="Content\css\app.css" />
+    <Content Include="Content\css\grabbing.png" />
+    <Content Include="Content\css\pushy.css" />
+    <Content Include="Content\css\swiper.css" />
+    <Content Include="Content\images\icon-map.png" />
+    <Content Include="Content\images\logo-ely.png" />
+    <Content Include="Content\images\logo-trust.png" />
+    <Content Include="Content\images\logos\ann.png" />
+    <Content Include="Content\images\logos\armani.png" />
+    <Content Include="Content\images\logos\blumarine.png" />
+    <Content Include="Content\images\logos\cantarelli.png" />
+    <Content Include="Content\images\logos\casadei.jpg" />
+    <Content Include="Content\images\logos\cesare.png" />
+    <Content Include="Content\images\logos\commedes.jpg" />
+    <Content Include="Content\images\logos\costume.jpg" />
+    <Content Include="Content\images\logos\dkny.png" />
+    <Content Include="Content\images\logos\dolce.jpg" />
+    <Content Include="Content\images\logos\dries.png" />
+    <Content Include="Content\images\logos\emillio.jpg" />
+    <Content Include="Content\images\logos\etro.jpg" />
+    <Content Include="Content\images\logos\fendi.jpg" />
+    <Content Include="Content\images\logos\furla.jpg" />
+    <Content Include="Content\images\logos\gf-ferre.jpg" />
+    <Content Include="Content\images\logos\giuseppe.gif" />
+    <Content Include="Content\images\logos\gucci.jpg" />
+    <Content Include="Content\images\logos\guess.png" />
+    <Content Include="Content\images\logos\hogan.jpg" />
+    <Content Include="Content\images\logos\lang.jpg" />
+    <Content Include="Content\images\logos\marella.gif" />
+    <Content Include="Content\images\logos\max.png" />
+    <Content Include="Content\images\logos\maxmara.png" />
+    <Content Include="Content\images\logos\missoni.jpeg" />
+    <Content Include="Content\images\logos\miu.png" />
+    <Content Include="Content\images\logos\mm.png" />
+    <Content Include="Content\images\logos\morch.jpg" />
+    <Content Include="Content\images\logos\parosh.jpg" />
+    <Content Include="Content\images\logos\paul.gif" />
+    <Content Include="Content\images\logos\prada.png" />
+    <Content Include="Content\images\logos\roberto.png" />
+    <Content Include="Content\images\logos\sander.jpg" />
+    <Content Include="Content\images\logos\versace.jpg" />
+    <Content Include="Content\images\logos\westwood.jpg" />
+    <Content Include="Content\images\logos\yves.jpg" />
+    <Content Include="Content\images\map-pic.png" />
+    <Content Include="Content\images\preudomap-pic-1.png" />
+    <Content Include="Content\images\preudomap-pic-2.png" />
+    <Content Include="Content\images\slider-bottom-1.jpg" />
+    <Content Include="Content\images\slider-bottom-2.jpg" />
+    <Content Include="Content\images\slider-bottom-3.jpg" />
+    <Content Include="Content\images\slider-bottom-4.jpg" />
+    <Content Include="Content\images\slider-new-1.jpg" />
+    <Content Include="Content\images\slider-new-2.jpg" />
+    <Content Include="Content\images\slider-new-3.jpg" />
+    <Content Include="Content\images\slider-new-4.jpg" />
+    <Content Include="Content\images\sprites.png" />
     <Content Include="index.html" />
-    <Content Include="js\imagesloaded.js" />
-    <Content Include="js\isotope.min.js" />
-    <Content Include="js\jquery.js" />
-    <Content Include="js\map.js" />
-    <Content Include="js\modernizr.js" />
-    <Content Include="js\pushy.min.js" />
-    <Content Include="js\script.js" />
-    <Content Include="js\swiper.min.js" />
+    <Content Include="Scripts\js\imagesloaded.js" />
+    <Content Include="Scripts\js\isotope.min.js" />
+    <Content Include="Scripts\js\jquery.js" />
+    <Content Include="Scripts\js\map.js" />
+    <Content Include="Scripts\js\modernizr.js" />
+    <Content Include="Scripts\js\pushy.min.js" />
+    <Content Include="Scripts\js\script.js" />
+    <Content Include="Scripts\js\swiper.min.js" />
     <Content Include="Scripts\app\AirWaybill\Columns.js" />
     <Content Include="Scripts\app\AirWaybill\Files.js" />
     <Content Include="Scripts\app\AirWaybill\Grid.js" />
@@ -717,9 +717,9 @@
     <Content Include="Areas\Forwarder\Views\web.config" />
     <Content Include="Areas\Forwarder\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Forwarder\Views\Applications\Index.cshtml" />
-    <Content Include="fonts\boblic.eot" />
-    <Content Include="fonts\boblic.ttf" />
-    <Content Include="fonts\boblic.woff" />
+    <Content Include="Content\fonts\boblic.eot" />
+    <Content Include="Content\fonts\boblic.ttf" />
+    <Content Include="Content\fonts\boblic.woff" />
     <None Include="Properties\PublishProfiles\Dev.pubxml" />
     <None Include="Properties\PublishProfiles\Release.pubxml" />
     <None Include="Scripts\jQuery\jquery-2.1.1.intellisense.js" />
