--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -40,6 +40,7 @@
     <Content Include="Databases\Alicargo-3_0-3_1.sql" />
     <Content Include="Databases\Alicargo-2_8-3_0.sql" />
     <Content Include="Databases\Alicargo-0_0-2_8.sql" />
+    <Content Include="Databases\Alicargo-3_1-3_2.sql" />
     <Content Include="Databases\Alicargo_Files-0_0-2_8.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
