added feedback processing
Related Work Items: #376

--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -22,6 +22,7 @@
 
 		<add key="DefaultFrom" value="robot@avionrussia.com" />
 		<add key="SupportEmail" value="6alyamov@gmail.com" />
+		<add key="FeedbackEmail" value="msk@alicargo.ru" />
 
 		<add key="JobPausePeriod" value="00:00:05" />
 		<add key="CourseSourceRetryPolicyPeriod" value="01:00:00" />
