--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -46,7 +46,7 @@
 	<system.web>
 		<customErrors mode="Off" />
 		<authentication mode="Forms">
-			<forms loginUrl="~/User/Login" timeout="10080" />
+			<forms loginUrl="~/Authentication/Login" timeout="10080" />
 		</authentication>
 		<membership>
 			<providers>
