refactored MailSender to use custom smtp settings
Related Work Items: #406

--- a/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
+++ b/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Calculation\BillSettings.cs" />
     <Compile Include="Common\IHolder.cs" />
     <Compile Include="Common\IHttpClient.cs" />
+    <Compile Include="Email\IMailFromResolver.cs" />
     <Compile Include="Exceptions\AccessForbidenException.cs" />
     <Compile Include="Exceptions\EntityNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidLogicException.cs" />
