--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -12,6 +12,11 @@
 			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
 			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
 		</sectionGroup>
+		<sectionGroup name="mailSettings">
+			<section name="default" type="System.Net.Configuration.SmtpSection" />
+			<section name="avion" type="System.Net.Configuration.SmtpSection" />
+			<section name="alicargo" type="System.Net.Configuration.SmtpSection" />
+		</sectionGroup>
 	</configSections>
 	<appSettings>
 		<add key="DefaultFrom" value="noreply@timez.org" />
@@ -28,16 +33,14 @@
 		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True;Application Name=Alicargo.Tests"
 		     providerName="System.Data.SqlClient" />
 	</connectionStrings>
-	<system.net>
-		<mailSettings>
-			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
-				<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
-			</smtp>
-			<!--<smtp deliveryMethod="Network" from="robot@avionrussia.com">
+	<mailSettings>
+		<default deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
+		</default>
+		<!--<default deliveryMethod="Network" from="robot@avionrussia.com">
 				<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef" port="587"/>
-			</smtp>-->
-		</mailSettings>
-	</system.net>
+			</default>-->
+	</mailSettings>
 	<userSettings>
 		<Alicargo.Tests.Properties.Settings>
 			<setting name="MailsFolder" serializeAs="String">
