--- a/Alicargo/Web.Dev.config
+++ b/Alicargo/Web.Dev.config
@@ -12,16 +12,14 @@
 	<appSettings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:10" />
 	</appSettings>
-	<system.net>
-		<mailSettings xdt:Transform="Replace">
-			<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
-			</smtp>
-			<!--<smtp deliveryMethod="Network" from="robot@avionrussia.com">
+	<mailSettings xdt:Transform="Replace">
+		<default deliveryMethod="SpecifiedPickupDirectory">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
+		</default>
+		<!--<default deliveryMethod="Network" from="robot@avionrussia.com">
 				<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef" port="587" />
-			</smtp>-->
-		</mailSettings>
-	</system.net>
+			</default>-->
+	</mailSettings>
 	<system.web>
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
 	</system.web>
