--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -3,7 +3,13 @@
 <configuration>
 	<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,  log4net" />
+		<sectionGroup name="mailSettings">
+			<section name="default" type="System.Net.Configuration.SmtpSection" />
+			<section name="avion" type="System.Net.Configuration.SmtpSection" />
+			<section name="alicargo" type="System.Net.Configuration.SmtpSection" />
+		</sectionGroup>
 	</configSections>
+
 	<appSettings>
 		<add key="webpages:Version" value="2.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
@@ -30,19 +36,20 @@
 		<add key="DefaultInsuranceRate" value="0.01" />
 		<add key="CourseSourceAttempts" value="3" />
 	</appSettings>
+
 	<connectionStrings>
 		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True"
 		     name="MainConnectionString" providerName="System.Data.SqlClient" />
 		<add connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True"
 		     name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
-	<system.net>
-		<mailSettings>
-			<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-				<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
-			</smtp>
-		</mailSettings>
-	</system.net>
+
+	<mailSettings>
+		<default deliveryMethod="SpecifiedPickupDirectory">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
+		</default>
+	</mailSettings>
+
 	<system.web>
 		<customErrors mode="Off" />
 		<authentication mode="Forms">
