--- a/Alicargo.Core.BlackBox.Tests/Alicargo.Core.BlackBox.Tests.csproj
+++ b/Alicargo.Core.BlackBox.Tests/Alicargo.Core.BlackBox.Tests.csproj
@@ -68,9 +68,13 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Common\HttpClientTests.cs" />
+    <Compile Include="Email\MailSenderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -81,6 +85,10 @@
     <ProjectReference Include="..\Alicargo.Core\Alicargo.Core.csproj">
       <Project>{577B60F9-32F7-4117-97DA-40743BFF4CA0}</Project>
       <Name>Alicargo.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Alicargo.DataAccess.Contracts\Alicargo.DataAccess.Contracts.csproj">
+      <Project>{E2F1A146-9076-4833-995E-084AC1B3EAC7}</Project>
+      <Name>Alicargo.DataAccess.Contracts</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
