--- a/Alicargo.Core.Tests/app.config
+++ b/Alicargo.Core.Tests/app.config
@@ -8,14 +8,17 @@
 			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
 			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
 		</sectionGroup>
+		<sectionGroup name="mailSettings">
+			<section name="default" type="System.Net.Configuration.SmtpSection" />
+			<section name="avion" type="System.Net.Configuration.SmtpSection" />
+			<section name="alicargo" type="System.Net.Configuration.SmtpSection" />
+		</sectionGroup>
 	</configSections>
-	<system.net>
-		<mailSettings>
-			<smtp deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
-				<specifiedPickupDirectory pickupDirectoryLocation="A:\Projects\Alicargo\Alicargo\Mails" />
-			</smtp>
-		</mailSettings>
-	</system.net>
+	<mailSettings>
+		<default deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
+			<specifiedPickupDirectory pickupDirectoryLocation="A:\Projects\Alicargo\Alicargo\Mails" />
+		</default>
+	</mailSettings>
 	<userSettings>
 		<Alicargo.Core.Tests.Properties.Settings>
 			<setting name="MailsFolder" serializeAs="String">
