--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -5,16 +5,25 @@
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:30" />
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="CourseSourceAttempts" value="5" />
 	</appSettings>
-	<system.net>
-		<mailSettings xdt:Transform="Replace">
-			<smtp deliveryMethod="Network" from="robot@avionrussia.com">
-				<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef" port="587" />
-			</smtp>
-			<!--<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
+
+	<mailSettings xdt:Transform="Replace">
+		<default>
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
+			         port="587" />
+		</default>
+		<avion>
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
+			         port="587" />
+		</avion>
+		<alicargo>
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef"
+			         port="587" />
+		</alicargo>
+		<!--<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
 				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
-			</smtp>-->
-		</mailSettings>
-	</system.net>
+			</default>-->
+	</mailSettings>
+
 	<system.web>
 		<compilation xdt:Transform="RemoveAttributes(debug)" />
 	</system.web>
