added initiator user id to event data
Related Work Items: #401

--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -34,7 +34,7 @@
 		     providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<mailSettings>
-		<default deliveryMethod="SpecifiedPickupDirectory" from="noreply@timez.org">
+		<default deliveryMethod="SpecifiedPickupDirectory">
 			<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
 		</default>
 		<!--<default deliveryMethod="Network" from="robot@avionrussia.com">
