--- a/Alicargo.BlackBox.Tests/app.config
+++ b/Alicargo.BlackBox.Tests/app.config
@@ -25,8 +25,7 @@
 		<add name="Alicargo.BlackBox.Tests.Properties.Settings.MainConnectionString"
 		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo;Integrated Security=True" />
 		<add name="Alicargo.BlackBox.Tests.Properties.Settings.FilesConnectionString"
-		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True"
-		     providerName="" />
+		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
 	</connectionStrings>
 	<userSettings>
 		<Alicargo.BlackBox.Tests.Properties.Settings>
