--- a/Alicargo.Core.BlackBox.Tests/Properties/Settings.settings
+++ b/Alicargo.Core.BlackBox.Tests/Properties/Settings.settings
@@ -1,22 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Alicargo.BlackBox.Tests.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Alicargo.Core.BlackBox.Tests.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="BaseAddress" Type="System.String" Scope="User">
-      <Value Profile="(Default)">http://localhost:8080/</Value>
-    </Setting>
-    <Setting Name="AdminLogin" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Admin</Value>
-    </Setting>
-    <Setting Name="AdminPassword" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Admin</Value>
-    </Setting>
-    <Setting Name="ClientLogin" Type="System.String" Scope="User">
-      <Value Profile="(Default)">c1</Value>
-    </Setting>
-    <Setting Name="ClientPassword" Type="System.String" Scope="User">
-      <Value Profile="(Default)">c1</Value>
-    </Setting>
     <Setting Name="MainConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
