--- a/Alicargo.Core.BlackBox.Tests/packages.config
+++ b/Alicargo.Core.BlackBox.Tests/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="AutoFixture" version="3.20.2" targetFramework="net45" />
   <package id="FluentAssertions" version="3.2.1" targetFramework="net45" />
+  <package id="Ninject" version="3.2.2.0" targetFramework="net45" />
 </packages>
