--- a/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
+++ b/Alicargo.Core.Contracts/Alicargo.Core.Contracts.csproj
@@ -40,6 +40,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
@@ -51,7 +52,7 @@
     <Compile Include="Calculation\BillSettings.cs" />
     <Compile Include="Common\IHolder.cs" />
     <Compile Include="Common\IHttpClient.cs" />
-    <Compile Include="Email\IMailFromResolver.cs" />
+    <Compile Include="Email\IMailConfiguration.cs" />
     <Compile Include="Exceptions\AccessForbidenException.cs" />
     <Compile Include="Exceptions\EntityNotFoundException.cs" />
     <Compile Include="Exceptions\InvalidLogicException.cs" />
