--- a/Alicargo.Core/Alicargo.Core.csproj
+++ b/Alicargo.Core/Alicargo.Core.csproj
@@ -59,6 +59,7 @@
     <Compile Include="AirWaybill\AwbManager.cs" />
     <Compile Include="Common\Holder.cs" />
     <Compile Include="Common\HttpClient.cs" />
+    <Compile Include="Email\MailConfiguration.cs" />
     <Compile Include="Excel\Client\CalculationDataDrawable.cs" />
     <Compile Include="Calculation\CalculationHelper.cs" />
     <Compile Include="Calculation\CalculationService.cs" />
@@ -133,9 +134,7 @@
       <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Application\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
