--- a/Alicargo.Deploy/Alicargo.Deploy.csproj
+++ b/Alicargo.Deploy/Alicargo.Deploy.csproj
@@ -34,14 +34,18 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="backup-db-alicargo-all.ps1" />
+    <None Include="resend-failed-emails.ps1" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
     <Content Include="Databases\Alicargo-3_0-3_1.sql" />
     <Content Include="Databases\Alicargo-2_8-3_0.sql" />
     <Content Include="Databases\Alicargo-0_0-2_8.sql" />
+    <Content Include="Databases\Alicargo-3_2-3_3.sql" />
     <Content Include="Databases\Alicargo-3_1-3_2.sql" />
     <Content Include="Databases\Alicargo_Files-0_0-2_8.sql" />
+    <Content Include="restore-alicargo_release-3_1.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
