--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -34,10 +34,24 @@
 				<rule name="login" enabled="true" stopProcessing="true">
 					<match url="^(.*)$" />
 					<action type="Redirect" url="http://avionrussia.com/authentication/login" appendQueryString="true"
-					        logRewrittenUrl="false" redirectType="Permanent" />
+						logRewrittenUrl="false" redirectType="Permanent" />
 					<conditions>
 						<add input="{HTTP_HOST}" pattern="^(login.)(avionrussia.com)$" />
 					</conditions>
+				</rule>
+				<rule name="AlicargoTrackerLogin" stopProcessing="true">
+					<match url="^(\/?)$" />
+					<conditions>
+						<add input="{HTTP_HOST}" pattern="^(.*?)(tracker.alicargo.ru)$" />
+					</conditions>
+					<action type="Redirect" url="http://tracker.alicargo.ru/authentication/login" />
+				</rule>
+				<rule name="AlicargoTrackerIndexBlocker" stopProcessing="true">
+					<match url="^(.*?)index.html$" />
+					<conditions>
+						<add input="{HTTP_HOST}" pattern="^(.*?)(tracker.alicargo.ru)$" />
+					</conditions>
+					<action type="CustomResponse" statusCode="403" statusReason="Forbidden: Access is denied." statusDescription="You do not have permission to view this directory or page using the credentials that you supplied." />
 				</rule>
 			</rules>
 		</rewrite>
