--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -7,15 +7,15 @@
 	</appSettings>
 
 	<mailSettings xdt:Transform="Replace">
-		<default>
+		<default deliveryMethod="Network" from="robot@avionrussia.com">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
 			         port="587" />
 		</default>
-		<avion>
+		<avion deliveryMethod="Network" from="robot@avionrussia.com">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
 			         port="587" />
 		</avion>
-		<alicargo>
+		<alicargo deliveryMethod="Network" from="robot@alicargo.ru">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef"
 			         port="587" />
 		</alicargo>
