--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -44,10 +44,28 @@
 		     name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
-	<mailSettings>
+	<!--<mailSettings>
 		<default deliveryMethod="SpecifiedPickupDirectory">
 			<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
 		</default>
+	</mailSettings>-->
+
+	<mailSettings>
+		<default deliveryMethod="Network" from="robot@avionrussia.com">
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
+			         port="587" />
+		</default>
+		<avion>
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
+			         port="587" />
+		</avion>
+		<alicargo deliveryMethod="Network" from="robot@alicargo.ru">
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef"
+			         port="587" />
+		</alicargo>
+		<!--<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
+				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
+			</default>-->
 	</mailSettings>
 
 	<system.web>
