--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -44,14 +44,8 @@
 		     name="FilesDbConnectionString" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
-	<!--<mailSettings>
-		<default deliveryMethod="SpecifiedPickupDirectory">
-			<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
-		</default>
-	</mailSettings>-->
-
 	<mailSettings>
-		<default deliveryMethod="Network" from="robot@avionrussia.com">
+		<!--<default deliveryMethod="Network" from="robot@avionrussia.com">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
 			         port="587" />
 		</default>
@@ -62,10 +56,10 @@
 		<alicargo deliveryMethod="Network" from="robot@alicargo.ru">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef"
 			         port="587" />
-		</alicargo>
-		<!--<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
-			</default>-->
+		</alicargo>-->
+		<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
+		</default>
 	</mailSettings>
 
 	<system.web>
