--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -1,17 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
-<!-- 
-    Note: Add entries to the App.config file for configuration settings
-    that apply only to the Test project.
--->
 <configuration>
 	<configSections>
-		<sectionGroup name="userSettings"
-		              type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-			<section name="Alicargo.Tests.Properties.Settings"
-			         type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-			         allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-		</sectionGroup>
 		<sectionGroup name="mailSettings">
 			<section name="default" type="System.Net.Configuration.SmtpSection" />
 			<section name="avion" type="System.Net.Configuration.SmtpSection" />
@@ -34,20 +24,10 @@
 		     providerName="System.Data.SqlClient" />
 	</connectionStrings>
 	<mailSettings>
-		<default deliveryMethod="SpecifiedPickupDirectory">
-			<specifiedPickupDirectory pickupDirectoryLocation="C:\Projects\Alicargo\Alicargo\Mails" />
+		<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
 		</default>
-		<!--<default deliveryMethod="Network" from="robot@avionrussia.com">
-				<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef" port="587"/>
-			</default>-->
 	</mailSettings>
-	<userSettings>
-		<Alicargo.Tests.Properties.Settings>
-			<setting name="MailsFolder" serializeAs="String">
-				<value>C:\Projects\Alicargo\Alicargo\Mails</value>
-			</setting>
-		</Alicargo.Tests.Properties.Settings>
-	</userSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
