--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -5,8 +5,8 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,  log4net" />
 		<sectionGroup name="mailSettings">
 			<section name="default" type="System.Net.Configuration.SmtpSection" />
-			<section name="avion" type="System.Net.Configuration.SmtpSection" />
-			<section name="alicargo" type="System.Net.Configuration.SmtpSection" />
+			<section name="user4" type="System.Net.Configuration.SmtpSection" />
+			<section name="user11" type="System.Net.Configuration.SmtpSection" />
 		</sectionGroup>
 	</configSections>
 
@@ -31,7 +31,7 @@
 		<add key="FeedbackEmail" value="msk@alicargo.ru" />
 
 		<add key="JobPausePeriod" value="00:00:05" />
-		<add key="CourseSourceRetryPolicyPeriod" value="01:00:00" />
+		<add key="CourseSourceRetryPolicyPeriod" value="12:00:00" />
 
 		<add key="DefaultInsuranceRate" value="0.01" />
 		<add key="CourseSourceAttempts" value="3" />
@@ -45,21 +45,15 @@
 	</connectionStrings>
 
 	<mailSettings>
-		<!--<default deliveryMethod="Network" from="robot@avionrussia.com">
-			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
-			         port="587" />
-		</default>
-		<avion>
-			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
-			         port="587" />
-		</avion>
-		<alicargo deliveryMethod="Network" from="robot@alicargo.ru">
-			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef"
-			         port="587" />
-		</alicargo>-->
-		<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
-		</default>
+		<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-default" />
+		</smtp>
+		<user4 deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-avion" />
+		</user4>
+		<user11 deliveryMethod="SpecifiedPickupDirectory" from="robot@alicargo.ru">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-alicargo" />
+		</user11>
 	</mailSettings>
 
 	<system.web>
