refactored mail sending

--- a/Alicargo.Core.BlackBox.Tests/app.config
+++ b/Alicargo.Core.BlackBox.Tests/app.config
@@ -4,8 +4,8 @@
 	<configSections>
 		<sectionGroup name="mailSettings">
 			<section name="default" type="System.Net.Configuration.SmtpSection" />
-			<section name="avion" type="System.Net.Configuration.SmtpSection" />
-			<section name="alicargo" type="System.Net.Configuration.SmtpSection" />
+			<section name="user4" type="System.Net.Configuration.SmtpSection" />
+			<section name="user11" type="System.Net.Configuration.SmtpSection" />
 		</sectionGroup>
 	</configSections>
 	<connectionStrings>
@@ -15,17 +15,18 @@
 		     connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Alicargo_Files;Integrated Security=True" />
 	</connectionStrings>
 	<mailSettings>
-		<default>
+		<default deliveryMethod="Network" from="robot@avionrussia.com">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
 			         port="587" />
 		</default>
-		<avion>
+		<user4 deliveryMethod="Network" from="robot@avionrussia.com">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
 			         port="587" />
-		</avion>
-		<alicargo>
-			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef" port="587" />
-		</alicargo>
+		</user4>
+		<user11 deliveryMethod="Network" from="robot@alicargo.ru">
+			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef"
+			         port="587" />
+		</user11>
 	</mailSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
