--- a/Alicargo.Tests/App.config
+++ b/Alicargo.Tests/App.config
@@ -4,8 +4,8 @@
 	<configSections>
 		<sectionGroup name="mailSettings">
 			<section name="default" type="System.Net.Configuration.SmtpSection" />
-			<section name="avion" type="System.Net.Configuration.SmtpSection" />
-			<section name="alicargo" type="System.Net.Configuration.SmtpSection" />
+			<section name="user4" type="System.Net.Configuration.SmtpSection" />
+			<section name="user11" type="System.Net.Configuration.SmtpSection" />
 		</sectionGroup>
 	</configSections>
 	<appSettings>
@@ -25,8 +25,14 @@
 	</connectionStrings>
 	<mailSettings>
 		<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-default" />
 		</default>
+		<user4 deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-avion" />
+		</user4>
+		<user11 deliveryMethod="SpecifiedPickupDirectory" from="robot@alicargo.ru">
+			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-alicargo" />
+		</user11>
 	</mailSettings>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
