--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0"?>
 
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+	<configSections>
+		<sectionGroup name="mailSettings">
+			<section xdt:Transform="SetAttributes" xdt:Locator="Match(name)" key="user11" value="user68" />
+		</sectionGroup>
+	</configSections>
+
 	<appSettings>
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="JobPausePeriod" value="00:00:30" />
 		<add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="CourseSourceAttempts" value="5" />
@@ -11,17 +17,14 @@
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
 			         port="587" />
 		</default>
-		<avion deliveryMethod="Network" from="robot@avionrussia.com">
+		<user68 deliveryMethod="Network" from="robot@avionrussia.com">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@avionrussia.com" password="GI7zMju78Jdik4ef"
 			         port="587" />
-		</avion>
-		<alicargo deliveryMethod="Network" from="robot@alicargo.ru">
+		</user68>
+		<user4 deliveryMethod="Network" from="robot@alicargo.ru">
 			<network host="smtp.gmail.com" enableSsl="true" userName="robot@alicargo.ru" password="GI7zMju78Jdik4ef"
 			         port="587" />
-		</alicargo>
-		<!--<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
-				<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\Mails" />
-			</default>-->
+		</user4>
 	</mailSettings>
 
 	<system.web>
@@ -34,7 +37,7 @@
 				<rule name="login" enabled="true" stopProcessing="true">
 					<match url="^(.*)$" />
 					<action type="Redirect" url="http://avionrussia.com/authentication/login" appendQueryString="true"
-						logRewrittenUrl="false" redirectType="Permanent" />
+					        logRewrittenUrl="false" redirectType="Permanent" />
 					<conditions>
 						<add input="{HTTP_HOST}" pattern="^(login.)(avionrussia.com)$" />
 					</conditions>
@@ -51,7 +54,8 @@
 					<conditions>
 						<add input="{HTTP_HOST}" pattern="^(.*?)(tracker.alicargo.ru)$" />
 					</conditions>
-					<action type="CustomResponse" statusCode="403" statusReason="Forbidden: Access is denied." statusDescription="You do not have permission to view this directory or page using the credentials that you supplied." />
+					<action type="CustomResponse" statusCode="403" statusReason="Forbidden: Access is denied."
+					        statusDescription="You do not have permission to view this directory or page using the credentials that you supplied." />
 				</rule>
 			</rules>
 		</rewrite>
