--- a/Alicargo/Web.config
+++ b/Alicargo/Web.config
@@ -45,9 +45,9 @@
 	</connectionStrings>
 
 	<mailSettings>
-		<smtp deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
+		<default deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
 			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-default" />
-		</smtp>
+		</default>
 		<user4 deliveryMethod="SpecifiedPickupDirectory" from="robot@avionrussia.com">
 			<specifiedPickupDirectory pickupDirectoryLocation="C:\inetpub\wwwroot\mails\alicargo.tracker-avion" />
 		</user4>
