fixed config transform

--- a/Alicargo/Web.Release.config
+++ b/Alicargo/Web.Release.config
@@ -3,7 +3,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 	<configSections>
 		<sectionGroup name="mailSettings">
-			<section xdt:Transform="SetAttributes" xdt:Locator="Match(name)" key="user11" value="user68" />
+			<section xdt:Transform="SetAttributes" xdt:Locator="Condition(@name='user11')" name="user68" />
 		</sectionGroup>
 	</configSections>
 
